# smolmux

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  Kconfig  LICENSE  README.md
bench/: bench_coalesce.c
cmake/: kconfig.cmake  musl-toolchain.cmake
configs/: defconfig.embedded  defconfig.full  defconfig.minimal  defconfig.uart  esp-idf-uart.smolmux-profile.json  esp32-arduino-lvgl.smolmux-profile.json  esp32-s3-touch-lcd-1.28.board.json  esp32-uart.board.json  gdb.smolmux-profile.json  linux-shell.smolmux-profile.json  newboard.board.json  nrf9151-zephyr.smolmux-profile.json  nrf9151.gdb-profile.json  samc21.board.json  samc21.gdb-profile.json  uboot.smolmux-profile.json
docs/: MCP-SETUP-FULL.md  MCP-SETUP.md  START-HERE.md  board-bringup-template.md  board-exploration-workflow.md  board-probing.md  daily-driver.md  demo-samc21-probe-transcript.md  hw-validation.md  issue-ws-hardening-deferred.md  openocd-cold-attach.md  persistent-serial-devices.md
scripts/: build_musl_toolchain.sh  kconfig_genconfig.py  smolmux-daily
src/: anomaly.c  anomaly.h  autoresponder.c  autoresponder.h  board_manifest.c  board_manifest.h  boot_stage.c  boot_stage.h  broker.c  broker.h  broker_info.c  broker_info.h  cli.c  client.c  client.h  constants.h  device_profile.c  device_profile.h  expect.c  expect.h  gdb_mcp.c  gdb_profile.c  gdb_profile.h  io_log.c  io_log.h  logger.c  logger.h  main.c  mcp_broker_conn.c  mcp_broker_conn.h  mcp_client.c  monitor.c  protocol.c  protocol.h  regex_engine.c  regex_engine.h  ring_buffer.c  ring_buffer.h  sink.h  text_log.c  (+2 more)
src/links/: gdb.c  gdb.h  link.h  link_wq.c  link_wq.h  serial_tcp.c  serial_tcp.h  uart.c  uart.h
src/sinks/: mcp.c  mcp.h  mcp_internal.h  mcp_schemas.c  mcp_schemas.h  mcp_tools.c  tcp.c  tcp.h  ws.c  ws.h
src/util/: base64.c  base64.h  json_helpers.c  json_helpers.h  keyspec.c  keyspec.h  mi_parse.c  mi_parse.h  profile_resolve.c  profile_resolve.h  sha1.c  sha1.h  shared_line.c  shared_line.h  sock_util.c  sock_util.h  str.c  str.h  timeutil.c  timeutil.h
systemd/: smolmux@.service.example
tests/: fake_gdb.c  test_anomaly.c  test_autoresponder.c  test_base64.c  test_board_manifest.c  test_boot_stage.c  test_broker.c  test_cli.c  test_device_profile.c  test_expect.c  test_gdb.c  test_gdb_broker.c  test_gdb_mcp.c  test_gdb_profile.c  test_io_log.c  test_keyspec.c  test_main.h  test_mcp.c  test_mcp_client.c  test_mcp_report.c  test_mi_parse.c  test_monitor.c  test_protocol.c  test_regex_engine.c  test_ring_buffer.c  test_serial_tcp.c  test_sock_util.c  test_str.c  test_tcp.c  test_text_log.c  test_uart.c  test_watcher.c  test_ws.c
